# super-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
docs/plans/: 2026-02-01-mcp-one-design.md  2026-02-01-mcp-one-implementation.md  2026-02-03-supermcp-critical-fixes-and-tests.md
src/: auth.rs  config.rs  core.rs  http_server.rs  lib.rs  main.rs  sandbox.rs  transport.rs  utils.rs
src/audit/: logger.rs  mod.rs
src/auth/: cache.rs  jwt.rs  mod.rs  oauth.rs  provider.rs  static_token.rs
src/cache/: mod.rs  schema_cache.rs
src/cli/: args.rs  call.rs  discover.rs  install.rs  mcp.rs  mod.rs  preset.rs  registry.rs  runtime.rs  skill_provider.rs
src/cloud/: cluster.rs  mod.rs  multi_tenant.rs  state.rs
src/compat/: api.rs  config.rs  mod.rs  standard.rs
src/config/: manager.rs  mod.rs  types.rs  validation.rs
src/core/: capability.rs  circuit_breaker.rs  filter.rs  lazy_loader.rs  mod.rs  pool.rs  protocol.rs  provider.rs  request_id.rs  routing.rs  server.rs
src/http_server/: mod.rs  routes.rs  server.rs
src/registry/: cache.rs  client.rs  mod.rs  types.rs
src/runtime/: manager.rs  mod.rs  node.rs  python_wasm.rs  types.rs
src/sandbox/: linux.rs  linux_advanced.rs  linux_full.rs  linux_landlock.rs  linux_seccomp.rs  macos.rs  mod.rs  none.rs  (+3 more)
tests/: auth_test.rs  call_args_extended_test.rs  call_args_test.rs  call_test.rs  call_workflow_test.rs  cli_test.rs  config_test.rs  discover_test.rs  error_test.rs  integration_test.rs  protocol_test.rs  provider_registry_extended_test.rs  provider_registry_test.rs  registry_test.rs  server_test.rs  skill_provider_extended_test.rs  skill_provider_test.rs  tool_output_test.rs  tools_providers_test.rs  tools_skill_flag_test.rs  transport_test.rs
(+16 files in other folders)
